...
class InputTextScreen extends Component {
  static navigationOptions = {
    title: 'Text Input',
  };
  render() {
...
            accessibilityLabel = "an_input_1_id"
            value = {state.text}
            testID = "input_1_id"
            onChangeText = {text => setParams({text})}
            maxLength = {(Platform.OS === 'ios') ? 35 : 45}
...
            maxLength = {(Platform.OS === 'ios') ? 10 : 10}
            accessibilityLabel = "an_input_2_id"
            testID = "input_2_id"
            value = {state.text}
            onChangeText = {text => setParams({text})}
...
            maxLength = {(Platform.OS === 'ios') ? 20 : 25}
            accessibilityLabel = "an_input_3_id"
            testID = "input_3_id"
            value = {state.text}
            onChangeText = {text => setParams({text})}
...
        <View style = {styles.nextButton}>
          <Button
            onPress={() => navigate('Buttons')}
            title="Next"
            accessibilityLabel = "an_Text_Input_Next"
            testID="Text_Input_Next" />
        </View>
      </View>
...
          <Button 
            accessibilityLabel='an_button_1_id'
            testID = 'button_1_id'
            title = 'button 1'
            onPress = {() => {Alert.alert('You pressed button 1!')}} />
          <Button 
          //differently positioned buttons with different texts which trigger different alerts
            accessibilityLabel='an_button_2_id'
            testID = 'button_2_id'
            title = 'button 2'
            color = 'red'
            onPress = {() => {Alert.alert('You pressed button 2!')}} />
          <Button 
            accessibilityLabel='an_button_3_id'
            testID = 'button_3_id'
            title = 'button 3'
            color = 'purple'
            onPress = {() => {Alert.alert('You pressed button 3!')}} />
        </View>
        <View style = {styles.buttonNextToImage}>
...
            <Button 
              accessibilityLabel='an_button_4_id'
              testID = 'button_4_id'
              title = 'button 4'
              onPress = {() => {Alert.alert('You pressed button 4!')}} />
            <Button 
              accessibilityLabel='an_button_5_id'
              testID = 'button_5_id'
              title = 'button 5'
              color = 'red'
              onPress = {() => {Alert.alert('You pressed button 5!')}} />
            <Button 
              accessibilityLabel='an_button_6_id'
              testID = 'button_6_id'
              title = 'button 6'
              color = 'purple'
              onPress = {() => {Alert.alert('You pressed button 6!')}} />
          </View>
          <Image
            accessibilityLabel="butterfly"
            accessible= {true}
            style = {{width: 200, height: 200}}
...
            title="Next"
            accessibilityLabel="an_Buttons_Next" 
            testID="Buttons_Next"/>
        </View>
      </View>
...
class ScrollViewScreen extends Component {
  static navigationOptions = {
    title: 'Scrolling',
  };

...
    const { navigate } = this.props.navigation;
    return (
      <ScrollView testID="LONGSCROLL">
        <View style = {styles.scrollContainer}>
          <View>
            <Text style = {styles.scrollText} testID = 'row_1_id' accessibilityLabel = 'an_row_1_id'>Row 1</Text>
          </View>
          <Text style = {styles.scrollText} testID = 'row_2_id' accessibilityLabel = 'an_row_2_id'>Row 2</Text>
          <Image
            accessibilityLabel="an_img_1"
            testID="img_1"
            style = {{width: 150, height: 150}} 
            source = {{uri: 'https://homepages.cae.wisc.edu/~ece533/images/monarch.png'}} />
            <Text style = {styles.scrollText} testID = 'row_3_id' accessibilityLabel = 'an_row_3_id'>Row 3</Text>
            <Text style = {styles.scrollText} testID = 'row_4_id' accessibilityLabel = 'an_row_4_id'>Row 4</Text>
            <Text style = {styles.scrollText} testID = 'row_5_id' accessibilityLabel = 'an_row_5_id'>Row 5</Text>
            <Text style = {styles.scrollText} testID = 'row_6_id' accessibilityLabel = 'an_row_6_id'>Row 6</Text>
          <Image
            accessibilityLabel="an_img_2"
            testID="img_2"
            style = {{width: 250, height: 100, marginBottom: 30}} 
            source = {{uri: 'https://homepages.cae.wisc.edu/~ece533/images/monarch.png'}} />
          <Image
            accessibilityLabel="an_img_3"
            testID="img_3"
            style = {{width: 300, height: 200}} 
            source = {{uri: 'https://homepages.cae.wisc.edu/~ece533/images/monarch.png'}} />
          <Text style = {styles.scrollText} testID = 'row_7_id' accessibilityLabel = 'an_row_7_id'>Row 7</Text>
          <Text style = {styles.scrollText} testID = 'row_8_id' accessibilityLabel = 'an_row_8_id'>Row 8</Text>
        </View>
                
...
          <Image 
            accessibilityLabel="an_img_4"
            testID='img_4'
            style = {{width: 150, height: 100}} 
            source = {{uri: 'https://homepages.cae.wisc.edu/~ece533/images/monarch.png'}} />
          <Image 
            accessibilityLabel="an_img_5"
            testID='img_5'
            style = {{width: 150, height: 100}} 
            source = {{uri: 'https://homepages.cae.wisc.edu/~ece533/images/monarch.png'}} />
...

        <View style = {styles.scrollContainer}>
          <Text style = {styles.scrollText} testID = 'row_9_id' accessibilityLabel = 'an_row_9_id'>Row 9</Text>
          <Text style = {styles.scrollText} testID = 'row_10_id' accessibilityLabel = 'an_row_10_id'>Row 10</Text>
          <Text style = {styles.scrollText} testID = 'row_11_id' accessibilityLabel = 'an_row_11_id'>Row 11</Text>
          <Text style = {styles.scrollText} testID = 'row_12_id' accessibilityLabel = 'an_row_12_id'>Row 12</Text>
          <Text style = {styles.scrollText} testID = 'row_13_id' accessibilityLabel = 'an_row_13_id'>Row 13</Text>
          <Text style = {styles.scrollText} testID = 'row_14_id' accessibilityLabel = 'an_row_14_id'>Row 14</Text>
          <Text style = {styles.scrollText} testID = 'row_15_id' accessibilityLabel = 'an_row_15_id'>Row 15</Text>
        </View>
      </ScrollView>
...
class FlatListScreen extends Component {
  static navigationOptions = {
    title: 'Flat List',
  };
  
...
                title="Next"
                accessibilityLabel="an_Flat_List_Next"
                testID="Flat_List_Next" />
            </View>
          } /> 
...
            <View style = {styles.nextButton}>
              <Button
                onPress={() => this.props.navigation.navigate('Picker')}
                title="Next"
                accessibilityLabel="an_Section_List_Next"
                testID="Section_List_Next" />
            </View>
          } /> 
...
        <Text style={{fontSize: 20}}>You picked: {this.state.day}</Text>
        <Button
          onPress={() => this.props.navigation.navigate('Switch')}
          title="Next" 
          accessibilityLabel="an_Picker_Next"
          testID="Picker_Next" />
      </View>
    );
...
            <Switch
              accessibilityLabel="an_defaultOFF_id"
              testID="defaultOFF_id"
              onValueChange={(value) => {this.setState({falseSwitchIsOn: value})}}
              style={{margin: 10}}
              value={this.state.falseSwitchIsOn} />
            <Text testID="left_switch_id" accessibilityLabel="an_left_switch_id">{this.state.falseSwitchIsOn ? 'ON' : 'OFF'}</Text>
          </View>
          <View>
            <Switch
              accessibilityLabel="an_defaultON_id"
              testID="defaultON_id"
              onValueChange={(value) => this.setState({trueSwitchIsOn: value})}
              style={{margin: 10}}
              value={this.state.trueSwitchIsOn} />
            <Text testID="right_switch_id" accessibilityLabel="an_right_switch_id">{this.state.trueSwitchIsOn ? 'ON' : 'OFF'}</Text>
          </View>
        </View>
